# living-chronicle

./: CLAUDE.md  PLAN.md  README.md  chronicle.db  pyproject.toml
backend/: __init__.py  main.py
backend/api/: __init__.py  router.py  websocket.py
backend/services/: __init__.py  grid_mapper.py  simulation_manager.py
chronicle/: __init__.py  __main__.py
chronicle/data/: __init__.py  database.py  models.py
chronicle/sim/: __init__.py  ages.py  engine.py  entities.py  events.py  gods.py  narration.py
chronicle/tests/: __init__.py  test_ages.py  test_gods.py  test_smoke.py
