[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "living-chronicle"
version = "0.1.0"
description = "A mythic cyclical civilization simulator with emergent gods"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
chronicle = "chronicle.__main__:main"

[tool.pytest.ini_options]
testpaths = ["chronicle/tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.setuptools.packages.find]
include = ["chronicle*"]
